@@ -24,7 +24,6 @@ Dist::Zilla::Plugin::Test::Compile = 2.036
 Dist::Zilla::Plugin::Test::NoTabs = 0
 Dist::Zilla::Plugin::EOLTests = 0
 Dist::Zilla::Plugin::MetaTests = 0
-Dist::Zilla::Plugin::Test::Version = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0.008
 Dist::Zilla::Plugin::Test::ChangesHasContent = 0
 Dist::Zilla::Plugin::Test::UnusedVars = 0
@@ -60,6 +59,7 @@ Dist::Zilla::Plugin::InstallGuide = 0
 Dist::Zilla::Plugin::CheckSelfDependency = 0
 Dist::Zilla::Plugin::Run::AfterBuild = 0
 Dist::Zilla::Plugin::RunExtraTests = 0.019
+Dist::Zilla::Plugin::CheckStrictVersion = 0
 Dist::Zilla::Plugin::Git::Check = 0
 Dist::Zilla::Plugin::Git::CheckFor::MergeConflicts = 0.008
 Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch = 0.004
@@ -168,7 +168,6 @@ Test::EOL = 0
 Test::MinimumVersion = 0
 Test::NoTabs = 0
 Test::Pod::No404s = 0
-Test::Version = 0
 Test::Mojibake = 0
 ; except this one, which is not added by a plugin (yet)
 
@@ -199,7 +198,6 @@ conflicts_module = Moose::Conflicts
 ; nor resolvable URIs
 ; it should be ignorable -- these plugins should be updated so they use
 ; FileFinders and Filters, OR simply to prune auto/*
--remove = Test::Version
 -remove = PodCoverageTests
 -remove = Test::Pod::No404s
 :version = 0.019
